Cleanup and fix table vertical scroll on mobile (when with selection)

--- a/src/components/popover/popover.ios.styl
+++ b/src/components/popover/popover.ios.styl
@@ -2,7 +2,6 @@
   position fixed
   background $popover-background
   z-index $z-popover
-  overflow visible
   max-width $popover-max-width
   > div
     box-shadow $popover-box-shadow
