--- a/src/components/table/table.mat.styl
+++ b/src/components/table/table.mat.styl
@@ -100,6 +100,8 @@
 
 .q-table-col-auto-width
   width 1px
+  > .q-option .q-radial-ripple
+    margin-bottom -100%
 
 /*
  * Separators
